--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "websitebackend",
+  "homepage": "http://HakNinja.github.io/deepak-kumar-resume",
   "version": "1.0.0",
   "description": "My website resume ",
   "main": "nodemon index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node index.js",
+    "predeploy" : "npm run build",
+    "deploy" : "gh-pages -d build",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix websitefrontend && npm run build --prefix websitefrontend"
   },
   "author": "Deepak-Kumar and Charanjeet Singh",
@@ -17,5 +20,8 @@
     "mongoose": "^6.0.8",
     "nodemailer": "^6.6.5",
     "nodemon": "^2.0.13"
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
